# Yin-Yang

./: .flake8  .gitignore  README.md  generated-poetry-sources.json  pubspec.yaml  pyproject.toml  setup.py  sh.oskar.yin_yang.json
.github/workflows/: python-app.yml
lib/: config.dart  main.dart
lib/pages/: home.dart  layout.dart  settings.dart  splash.dart
lib/plugins/: kde.dart
lib/theme/: theme_notifier.dart
lib/widgets/: custom_button.dart  dropdown_plugin_tile.dart  kde_settings.dart  plugin_tile.dart
linux/: my_application.cc
resources/: logo.svg-autosave.kra
resources/translations/: yin_yang.de_DE.ts
scripts/: build_ui.sh
src/: config.py
src/plugins/: _plugin.py  gtk.py  icons.py  system.py
src/yin_yang/: __init__.py  __main__.py  config.py  daemon_handler.py  theme_manager.py
src/yin_yang/plugins/: __init__.py  _plugin.py  brave.py  custom.py  gtk.py  konsole.py  system.py  vscode.py  wallpaper.py
src/yin_yang/ui/: main_window_connector.py
test/: widget_test.dart
yin_yang/: __main__.py  daemon_handler.py  position.py
yin_yang/plugins/: _plugin.py  konsole.py
yin_yang/ui/: main_window_connector.py
